# internal/dto/dto.go
@@ -15,3 +15,7 @@ type GetJWTInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type AccessTokenOutput struct {
+	AccessToken string `json:"access_token"`
+}
